--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="ky-startup">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css"></link>
+    <link rel="stylesheet" href="/css/bootstrap.css"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
