added <a></a> tags for potential link destinations

--- a/index.html
+++ b/index.html
@@ -10,26 +10,41 @@
     <main class="container">
         <nav id="nav">
             <ul class="nav-list-container ky-nav-flex-row-sm">
-                <li class="list-item">home</li>
-                <li class="list-item">about</li>
-                <li class="list-item">testimonials</li>
-                <li class="list-item">contact</li>
+                <a href="" class="link ky-no-decor">
+                    <li class="list-item">Home</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">About</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Testimonials</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Contact</li>
+                </a>
             </ul>
         </nav>
         <nav id="nav">
             <ul class="nav-list-container ky-nav-flex-row">
-                <li class="list-item">home</li>
-                <li class="list-item">about</li>
-                <li class="list-item">testimonials</li>
-                <li class="list-item">contact</li>
+                <a href="" class="link ky-no-decor">
+                    <li class="list-item">Home</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">About</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Testimonials</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Contact</li>
+                </a>
             </ul>
         </nav>
         <nav id="nav">
             <ul class="nav-list-container ky-nav-flex-row-lg">
-                <li class="list-item">home</li>
-                <li class="list-item">about</li>
-                <li class="list-item">testimonials</li>
-                <li class="list-item">contact</li>
+                <a href="" class="link ky-no-decor">
+                    <li class="list-item">Home</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">About</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Testimonials</li>
+                </a><a href="" class="link ky-no-decor">
+                    <li class="list-item">Contact</li>
+                </a>
             </ul>
         </nav>
     </main>
